--- a/kratos_salome_plugin/gui/ui_forms/groups_window.ui
+++ b/kratos_salome_plugin/gui/ui_forms/groups_window.ui
@@ -30,7 +30,7 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>110</x>
       <y>200</y>
       <width>89</width>
       <height>25</height>
@@ -38,6 +38,16 @@
     </property>
     <property name="text">
      <string>Show Mesh</string>
+    </property>
+   </widget>
+   <widget class="QListView" name="listView">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>120</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
     </property>
    </widget>
   </widget>
