--- a/kratos_salome_plugin/gui/ui_forms/plugin_main_window.ui
+++ b/kratos_salome_plugin/gui/ui_forms/plugin_main_window.ui
@@ -20,36 +20,20 @@
      <rect>
       <x>140</x>
       <y>160</y>
-      <width>371</width>
-      <height>121</height>
+      <width>424</width>
+      <height>126</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTextBrowser" name="textBrowser">
-       <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
-       </property>
-       <property name="html">
-        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Welome to the &lt;/span&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Kratos Salome Plugin&lt;/span&gt;&lt;/p&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Click &lt;/span&gt;&lt;span style=&quot; font-size:14pt; font-style:italic;&quot;&gt;Load Application&lt;/span&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt; to start a new case&lt;/span&gt;&lt;/p&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Or click &lt;/span&gt;&lt;span style=&quot; font-size:14pt; font-style:italic;&quot;&gt;Open&lt;/span&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt; to open an existing case&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Welcome to the &lt;/span&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Kratos Salome Plugin&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QPushButton" name="pushButton_Load_Application">
-         <property name="text">
-          <string>Load Application</string>
-         </property>
-        </widget>
-       </item>
        <item>
         <widget class="QPushButton" name="pushButton_Open">
          <property name="text">
@@ -89,7 +73,9 @@ p, li { white-space: pre-wrap; }
      <string>Help</string>
     </property>
     <addaction name="actionAbout"/>
-    <addaction name="actionWebsite"/>
+    <addaction name="actionWebsite_Plugin"/>
+    <addaction name="actionWebsite_Kratos"/>
+    <addaction name="actionWebsite_Flowgraph"/>
    </widget>
    <widget class="QMenu" name="menuKratos">
     <property name="title">
@@ -97,9 +83,10 @@ p, li { white-space: pre-wrap; }
     </property>
     <addaction name="actionGroups"/>
     <addaction name="separator"/>
-    <addaction name="actionLoad_Application"/>
     <addaction name="separator"/>
     <addaction name="actionImport_MDPA"/>
+    <addaction name="separator"/>
+    <addaction name="actionLaunch_Flowgraph"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuKratos"/>
@@ -163,9 +150,9 @@ p, li { white-space: pre-wrap; }
     <string>About</string>
    </property>
   </action>
-  <action name="actionWebsite">
+  <action name="actionWebsite_Plugin">
    <property name="text">
-    <string>Website</string>
+    <string>Website Plugin</string>
    </property>
   </action>
   <action name="actionGroups">
@@ -174,6 +161,21 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="shortcut">
     <string>Ctrl+G</string>
+   </property>
+  </action>
+  <action name="actionLaunch_Flowgraph">
+   <property name="text">
+    <string>Launch Flowgraph</string>
+   </property>
+  </action>
+  <action name="actionWebsite_Kratos">
+   <property name="text">
+    <string>Website Kratos</string>
+   </property>
+  </action>
+  <action name="actionWebsite_Flowgraph">
+   <property name="text">
+    <string>Website Flowgraph</string>
    </property>
   </action>
  </widget>
